chore: Apply HtmlWebpackPlugin to generate html file to dist directory and remove static dist dir

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fxjs": "^0.21.3"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
