--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "fxjs": "^0.21.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@testing-library/dom": "^8.10.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "webpack": "^5.60.0",
