--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@swc/core": "^1.2.104",
     "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.14.1",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
+    "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
