chore: Add keyword to run wepack-dev-server

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A project to learn fxjs and fxdom",
   "scripts": {
     "build": "webpack",
+    "dev": "webpack-dev-server",
     "test": "jest"
   },
   "jest": {
