--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
+    "prettier": "2.4.1",
     "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
